added landscape view for mobile

--- a/index.html
+++ b/index.html
@@ -2,31 +2,36 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8" name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
     <title>Kenneth</title>
 </head>
 
 <body>
-
     <button class='start'>Start/Restart</button>
     <div class='score'>Score: <span>0</span></div>
-
-    <div class='grid'></div>
-
-    <div class='btn-wrapper'>
-        <div class='up'>
-            <p>v</p>
+    <div class='landscape-mode'>
+        <div class='screen'>
+            <div class='grid'></div>
         </div>
-        <div class='side-wrapper'>
-            <div class='left'>
-                <</div>
-                    <div class='right'>></div>
+        <div class='controllers'>
+            <div class='btn-wrapper'>
+                <div class='up'>
+                    <p>v</p>
+                </div>
+                <div class='side-wrapper'>
+                    <div class='left'>
+                        <</div>
+                            <div class='right'>></div>
+                    </div>
+                    <div class='down'>v</div>
+                </div>
             </div>
-            <div class='down'>v</div>
         </div>
     </div>
+
 
     <!-- <div class='warning-prompt'>
         <h3>It may be none of my beeswax, but like you've resized your screen. Click 'ok' to have a fantastic game.</h3>
